--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ fieldset:hover {
 <img src="https://flagcdn.com/w320/ca.png" alt="Canada Flag" class="flag" />
 <div class="intro">
  <p>
- 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ወደ WILLY TRAVEL 🇨🇦🇪🇹🇨🇦🇪🇹
+ 🇪🇹🇨🇦🇪🇹🇨🇦 🌐 ለ ፓስፖርት ብቻ የጣት አሻራ መስጫ 🇨🇦🇪🇹🇨🇦🇪🇹
   </p>
   <p>✅በ WILLY TRAVEL የጉዞ ምኞቶቻችሁን ወደ እውነት ለመቀየር ተዘጋጅተናል። የካናዳን የተፈጥሮ ውበት ለመዳሰስ፣ የስራ እድል ለማግኘት ፣ ወይም ኢሚግሬሽንን፣ ትምህርትን ወይም የንግድ እድሎችን ለመከታተል እያሰብክ ከሆነ፣ እያንዳንዱን እርምጃ አብረናችሁ ለመራመድ መጥተናል።</p>
   <p>✅ቪዛ ማማከር እና ማስፈፀም፣ ፓስፖርት ማስጨረስ፣የጉዞ እቅድ እና ድንበር ተሻጋሪ አገልግሎቶች ላይ ከበቂ እውቀት ጋር፣ ለልዩ ጉዞዎች የተዘጋጀ ግላዊ ድጋፍ እናቀርባለን።
